[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyurd"
version = "0.1.0"
description = "Python reimplementation of URD trajectory inference (scanpy/AnnData compatible)"
readme = "pyurd/README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "anndata>=0.9",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "scikit-misc>=0.3.1",
]

[project.optional-dependencies]
full = [
    "diptest>=0.6",   # for preference divergence method
    "joblib>=1.2",    # for parallel flood simulations
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyurd*"]
